# Rust-Vulkan

./: .gitignore  Cargo.toml  Readme-future.md  Readme.md
examples/: LICENSE
examples/gravity/: Cargo.toml  Readme.md
examples/gravity/src/: main.rs
profiles/: vp_gpuinfo_amd_radeon_rx_6800_2_0_331_windows_11.json  vp_gpuinfo_google_pixel_5_512_490_0_android_14_0.json  vp_gpuinfo_nvidia_geforce_rtx_3070_572_83_0_0_windows_10.json  vp_gpuinfo_samsung_sm_s911b_512_676_0_android_14_0.json
rsl/: Readme-next.md  Readme.md
rsl-vk-sys/: Cargo.toml
rsl/book/src/: SUMMARY.md  intro.md
rsl/rsl-borrow-checker/: Cargo.toml
rsl/rsl-data/: Cargo.toml
rsl/rsl-data-next/src/: internal.rs
rsl/rsl-data-next/src/internal/: ast.rs  ir.rs  tokens.rs
rsl/rsl-data/rsl-libs/core/: core.rsl
rsl/rsl-data/rsl-std/: core.rsl
rsl/rsl-data/src/: ast.rs  core.rs  input.rs  internal.rs  lib.rs  mid.rs  passes.rs
rsl/rsl-data/src/ast/: expr.rs  function.rs  module.rs  parser.rs  statement.rs  structure.rs  token.rs  tokenizer.rs  traits.rs  ty.rs
rsl/rsl-data/src/internal/: ast.rs  ir.rs  tokens.rs
rsl/rsl-data/src/internal/ir/: astconvert.rs
rsl/rsl-lexer/: Cargo.toml
rsl/rsl-lexer/src/: lib.rs
rsl/rsl-lsp/: Cargo.toml
rsl/rsl-lsp/src/: main.rs
rsl/rsl-parser/: Cargo.toml
rsl/rsl-parser/src/: lib.rs
rsl/rsl-rust/: Cargo.toml
rsl/rsl-spirv/: .gitignore  Cargo.toml  test.spv
rsl/rsl-spirv/src/: lib.rs  passes.rs
rsl/rsl-spirv/src/passes/: emit_spirv.rs  logical_pointer_specialization.rs
rsl/rsl-test/: Cargo.toml  Config-template.toml  Readme.md
rsl/rsl-type-checker/: Cargo.toml
rsl/rsl-type-checker/src/: lib.rs
rsl/rsl-vscode/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  rsl.tmLanguage.json
rsl/rsl-vscode/src/: extension.ts
rsl/rsl-wgsl/: Cargo.toml
rsl/rslc/: Cargo.toml
rsl/rslc/src/: lib.rs
rsl/runtime/: CMakeLists.txt
rsl/runtime/include/: rsl-rt.h
rsl/runtime/src/: main-test.cpp  main.cpp  main.hpp  rsl-rt-format.h  rsl-rt-internal.hpp  rsl-rt.h
rsl/spec/: book.toml
rsl/spec-old/: book.toml
rsl/spec-old/src/: SUMMARY.md  compiler.md  spec.md
rsl/spec-old/src/basics/: hello_compute.md  modules.md
rsl/spec-old/src/spec/: attributes.md  borrow.md  builtins.md  definitions.md  modules.md  syntax.md  targets.md  tokens.md  uniformity.md
rsl/spec-old/src/spec/targets/: c.md  wasm.md
rsl/spec/src/: SUMMARY.md
rsl/spec/src/basics/: caps.md  hello_compute.md
rsl/spec/src/spec/: borrow.md  definitions.md  syntax.md  targets.md  tokens.md  type_paths.md  uniformity.md
rsl/spec/src/spec/targets/: rust.md  spirv.md  wgsl.md
slang-build/: Cargo.toml  Readme.md
slang-build/src/: lib.rs
util/profiles/: rsl.json
vk-2d/: Cargo.toml  Readme.md
vk-ecs/: Cargo.toml  Readme.md  ShaderInterface.md
vk-ecs/shaders/: hash-map.slang  world.slang
vk-ecs/src/: compat.rs  encoding.rs  lib.rs  world.rs
vk-sys-ng/: Cargo.toml  build.rs  strip-sc.sh  vk-only.xml
vk-sys-ng-build/: .gitignore  Cargo.toml
vk-sys-ng-build/examples/: raw.rs
vk-sys-ng-build/src/: data.rs  generator.rs  lib.rs  parser.rs
vk-sys-ng-build/src/parser/: cparse.rs  xmlparse.rs
