[workspace]
members = [ "examples/gravity", "rsl/rsl-data", "rsl/rsl-rust", "rsl/rsl-spirv", "rsl/rsl-test", "rsl/rsl-wgsl", "rsl/rslc", "slang-build", "vk-2d","vk-ecs"]
resolver = "3"



[workspace.dependencies]

unicode-segmentation = "1.12.0"
regex = "1.10.3"
ariadne = "0.4.1"

chrono = { version = "0.4.34" }
rand = "0.9.0"
winit = "0.29"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.19"

rspirv = "0.12.0"
naga = { version = "24.0.0", features = ["wgsl-in", "spv-out"] }


ash = "0.38.0"
ash-window = "0.13.0"
bitflags = "2.4.2"


clap = { version = "4.5.27", features = ["derive"] }
notify = "8.0.0"
anyhow = "1.0.79"
thiserror = "1.0.56"


nalgebra = {version = "~0.32", features = ["serde-serialize"] }



syn = { version = "2.0.38", features = ["full", "visit", "visit-mut"]}
proc-macro2 = "1.0.69"
quote = "1.0.33"


tokio = { version = "1.44.0", features = ["sync", "rt", "parking_lot"]}


pollster = "0.3"
once_cell = "1.18.0"



bytemuck = { version = "1.14", features = ["derive"] }
hashbrown = { version = "0.14" }


